--- a/index.html
+++ b/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Group Chat Timeline</title>
-  <!-- Link to external CSS -->
-  <link rel="stylesheet" href="styles.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Groupchat Timeline</title>
+	<link rel="stylesheet" href="styles.css">
+	<!-- Favicon -->
+	<link rel="icon" href="thumbnail.jpg" type="image/jpg">
+	<!-- Social Media Preview -->
+	<meta property="og:image" content="thumbnail.jpg">
+	<meta property="og:image:type" content="image/jpg">
+	<meta property="og:image:width" content="1200"> <!-- Recommended width -->
+	<meta property="og:image:height" content="630"> <!-- Recommended height -->
 </head>
 <body>
-  <div id="timeline-wrapper">
-    <div id="timeline-container"></div>
-  </div>
+	<!-- Header with title and profile pic -->
+	<div id="header">
+		<div id="profile-pic">GB</div>
+		<h1>Groupchat Timeline</h1>
+	</div>
 
-  <!-- Link to external JS -->
-  <script type="module" src="script.js"></script>
+	<div id="timeline-wrapper">
+		<div id="timeline-container"></div>
+	</div>
+
+	<!-- Scroll to top button -->
+	<button id="scroll-to-top" title="Scroll to top">↑</button>
+
+	<script type="module" src="script.js"></script>
 </body>
 </html>
